--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -378,7 +378,11 @@
         display: flex
         flex-direction: column-reverse
         align-items: flex-start
-        gap: 15px
+        // gap: 15px
+    &__button
+      margin-top: 15px
+    &__required
+      margin-top: 15px
     &__bottom
       &-links
         width: 100%
