--- a/sass/sections/_footer.sass
+++ b/sass/sections/_footer.sass
@@ -35,10 +35,11 @@
     min-width: 493px
     display: flex
     flex-direction: column
-    gap: 22px
+    // gap: 22px
 
   &__text
     margin: 0
+    margin-top: 10px
     padding: 0
     font-size: 14px
     line-height: 22px
@@ -63,13 +64,14 @@
     &--spread
       display: flex
       flex-direction: column
-      gap: 22px
   &__item
     font-weight: normal
     font-size: 14px
     line-height: 22px
     color: $footer-text-color
     display: flex
+    &--spread
+      margin-top: 22px
   &__link
     text-decoration: none
     color: inherit
@@ -83,7 +85,7 @@
     display: flex
     flex-flow: row wrap
     justify-content: space-between
-    gap: 15px
+    // gap: 15px
     font-size: 12px
     line-height: 15px
     &__bottom
@@ -101,6 +103,7 @@
     font-weight: normal
     border-radius: 4px
     padding: 18px 23px
+    margin-bottom: 15px
   &__msg
     border: none
     outline: none
@@ -130,8 +133,10 @@
     justify-content: space-between
     &-links
       display: flex
-      gap: 15px
+      // gap: 15px
       margin: 0 auto
+    &-link
+      margin: 0 8px
     &-payments
       &__img
         width: 136px
